fix legend on iphone screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -235,6 +235,14 @@ $step-max-width: 420px;
       width: 90px;
       text-align: left;
     }
+
+    tspan.legend3 {
+      visibility: visible;
+      font-family: Roboto;
+      font-size: 14px;
+      width: 90px;
+      text-align: left;
+    }
   }
 }
 
